--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;800&display=swap');
+
 * {
   box-sizing: border-box;
 }
+
+
 
 /*# sourceMappingURL=style.css.map */
