--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,265 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap');
+
+
+:root {
+    --padding: 20px;
+}
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    min-height: 100vh;
+    font-family: 'Raleway', sans-serif;
+
+    background-color: whitesmoke;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.picture-container {
+    position: relative;
+    width: 100%;
+    height: 30vh;
+    background-image: url(./assets/sunflowerBackground.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    p {
+        @extend %banner-image;
+        bottom: 5px;
+        opacity: 0.7;
+        text-align: center;
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+    }
+}
+%banner-image {
+    position: absolute;
+    left: 0;
+    right: 0;
+    color: white;
+    margin: auto;
+}
+.banner {
+    @extend %banner-image;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    height: 5rem;
+    background-color: rgba(0,0,0,0.5);
+    gap: 0.5rem;
+    img {
+        width: 3rem;
+        filter: invert(1);
+    }
+}
+
+.form {
+display: flex;
+flex-direction: column;
+justify-content: center;
+    form {
+
+
+        header {
+            font-size: 1.5rem;
+            margin-bottom: 25px;
+            font-weight: 700;
+        }
+
+        fieldset {
+            background-color: white;
+            padding: var(--padding);
+            box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.2);
+            border: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: var(--padding);
+        }
+
+        footer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: var(--padding) var(--padding) 0;
+
+            button {
+                padding: 13px 40px;
+                border: none;
+                border-radius: 10px;
+                background-color: yellow;
+                font-weight: 700;
+                font-size: 1rem;
+                box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+            }
+            p {
+                margin-top: var(--padding);
+                margin-bottom: var(--padding);
+                font-size: 0.9rem;
+                a {
+                    text-decoration: none;
+                    color: yellowgreen;
+                }
+            }
+        }
+    }
+}
+.info {
+    padding: var(--padding);
+    font-weight: 700;
+    p {
+        margin-top: var(--padding);
+        margin-bottom: var(--padding);
+        line-height: 1.3rem;
+        span {
+            font-style: italic;
+        }
+    }
+}
+.input-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    justify-content: space-between;
+}
+.input-container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+
+    label {
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: 700;
+        letter-spacing: 3px;
+        color: gray;
+    }
+
+    input {
+        padding: 7px 3px;
+    }
+}
+
+
+
+
+@media (min-width: 640px) {
+
+    .info {
+        width: 65%;
+        margin: 0 auto;
+        p {
+            text-align: center;
+        }
+    }
+
+    .input-container {
+        
+        input {
+            width: 250px;
+        }
+    }
+
+}
+
+@media (min-width: 1024px) {
+    :root {
+        --padding: 40px;
+    }
+
+    body {
+        display: flex;
+    }
+
+    .container {
+        flex-direction: row;
+        flex: 1;
+    }
+
+    .picture-container {
+        position: relative;
+        height: 100%;
+        max-width: 40%;
+    }
+    .banner {
+        top: 29%;
+        margin: 0;
+        gap: 1rem;
+    }
+
+    .info {
+        width: 100%;
+        margin: 0;
+        padding: 0 var(--padding);
+        p {
+            text-align: start;
+        }
+    }
+
+    .form {
+        flex-grow: 3;
+        form {
+            header {
+                margin-bottom: 0;
+            }
+            fieldset {
+                justify-content: start;
+                align-items: start;
+            }
+    
+            footer {
+                align-items: start;
+            }
+        }
+    }
+
+    .input-group {
+        width: 100%;
+        justify-content: space-between;
+    }
+    .input-container {
+        input {
+            width: 100%;
+        }
+    }
+}
+
+@media (min-width: 1280px) {
+    .input-group {        
+        gap: 80px;
+    }
+    .input-container {
+        input {
+            width: 100%;
+        }
+    }
+
+}
+
+@media (min-width: 1536px) {
+
+
+    .input-group {
+        justify-content: start;
+    }
+    .input-container {
+        max-width: 300px;
+        input {
+            width: 100%;
+        }
+    }
+
 }
