--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap');
 
+$primary-color: rgb(252, 255, 82);
 
 :root {
     --padding: 20px;
@@ -100,10 +101,14 @@ justify-content: center;
                 padding: 13px 40px;
                 border: none;
                 border-radius: 10px;
-                background-color: yellow;
+                background-color: $primary-color;
                 font-weight: 700;
                 font-size: 1rem;
                 box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+                transition: all 0.3s;
+                &:hover {
+                    background-color: rgb(255,235,0);
+                }
             }
             p {
                 margin-top: var(--padding);
@@ -111,7 +116,12 @@ justify-content: center;
                 font-size: 0.9rem;
                 a {
                     text-decoration: none;
-                    color: yellowgreen;
+                    color: $primary-color;
+                    text-shadow: 0 0 3px rgba($color: #000000, $alpha: 0.8);
+                    transition: all 0.3s;
+                    &:hover {
+                        text-shadow: 0 0 6px rgba($color: #000000, $alpha: 0.8);
+                    }
                 }
             }
         }
@@ -150,6 +160,23 @@ justify-content: center;
 
     input {
         padding: 7px 3px;
+        border: 1px solid rgba($color: #000000, $alpha: 0.3);
+        border-radius: 5px;
+
+        &:focus {
+            border-color:blue;
+            outline: none;
+            // background-color: rgba($color: $primary-color, $alpha: 0.4);
+            box-shadow: 0 2px 5px rgba($color: black, $alpha: 0.3);
+        }
+
+        &.error {
+            border-color:red;
+        }
+        
+        // &:invalid {
+        //     border: 1px solid red;
+        // }
     }
 }
 
