--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap");
 :root {
   --padding: 20px;
@@ -134,9 +135,11 @@ body {
   flex-wrap: wrap;
   gap: 25px;
   justify-content: space-between;
+  width: 100%;
 }
 
 .input-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -152,6 +155,7 @@ body {
   padding: 7px 3px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 5px;
+  transition: all 0.2s;
 }
 .input-container input:focus {
   border-color: blue;
@@ -161,6 +165,22 @@ body {
 .input-container input.error {
   border-color: red;
 }
+.input-container input.error + span {
+  visibility: visible;
+}
+.input-container span {
+  margin-top: 2px;
+  font-size: 13px;
+  color: red;
+  visibility: hidden;
+}
+.input-container span::before {
+  font-size: 20px;
+  content: "❌";
+  position: absolute;
+  top: -8px;
+  right: 0;
+}
 
 @media (min-width: 640px) {
   .info {
@@ -169,6 +189,9 @@ body {
   }
   .info p {
     text-align: center;
+  }
+  .input-group {
+    width: auto;
   }
   .input-container input {
     width: 250px;
