--- a/style.scss
+++ b/style.scss
@@ -144,8 +144,10 @@ justify-content: center;
     flex-wrap: wrap;
     gap: 25px;
     justify-content: space-between;
+    width: 100%;
 }
 .input-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -162,6 +164,7 @@ justify-content: center;
         padding: 7px 3px;
         border: 1px solid rgba($color: #000000, $alpha: 0.3);
         border-radius: 5px;
+        transition: all 0.2s;
 
         &:focus {
             border-color:blue;
@@ -173,9 +176,30 @@ justify-content: center;
         &.error {
             border-color:red;
         }
+        &.error + span {
+            visibility: visible;
+        }
         
         // &:invalid {
         //     border: 1px solid red;
+        // }
+    }
+
+    span {
+        margin-top: 2px;
+        font-size: 13px;
+        color: red;
+        visibility: hidden;
+
+        &::before {
+            font-size: 20px;
+            content: '❌';
+            position: absolute;
+            top: -8px;
+            right: 0;
+        }
+        // &.error, &.error::before {
+        //     visibility: visible;
         // }
     }
 }
@@ -193,6 +217,9 @@ justify-content: center;
         }
     }
 
+    .input-group {
+        width: auto;
+    }
     .input-container {
         
         input {
