--- a/style.scss
+++ b/style.scss
@@ -43,6 +43,7 @@ body {
             color: inherit;
         }
     }
+    
 }
 %banner-image {
     position: absolute;
@@ -54,16 +55,35 @@ body {
 .banner {
     @extend %banner-image;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     top: 0;
     bottom: 0;
-    height: 5rem;
+    height: 6rem;
     background-color: rgba(0,0,0,0.5);
     gap: 0.5rem;
     img {
-        width: 3rem;
+        width: 2.5rem;
         filter: invert(1);
+    }
+    div {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        span {
+            font-size: 12px;
+        }
+        a {
+            text-decoration: none;
+            color: $primary-color;
+            transition: all 0.4s;
+        }
+        
+        a:hover {
+            text-shadow: 0 0 5px black;
+        }
     }
 }
 
@@ -249,7 +269,7 @@ justify-content: center;
         max-width: 40%;
     }
     .banner {
-        top: 29%;
+        top: 31.7%;
         margin: 0;
         gap: 1rem;
     }
